# squidge

./: .gitignore  CMakeLists.txt  DEVNOTES.txt  Doxyfile.in  README.txt
client/: BaseEntity.cpp  BaseEntity.h  CMakeLists.txt  Edict.cpp  Edict.h  Level.cpp  Level.h  LevelGenerator.cpp  LevelGenerator.h  ResourceManager.cpp  ResourceManager.h  SpriteBatch.cpp  SpriteBatch.h  Stopwatch.cpp  Stopwatch.h  TestEntity.cpp  TestEntity.h  Texture.cpp  Texture.h  Tile.h  TileType.h  main.cpp
client/graphics/: Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp
client/sdl/: Initializer.cpp  Initializer.h  SurfaceAutoLock.h  Window.cpp  Window.h
common/: CMakeLists.txt  Cartograph.h  Cartograph.ipp  Color.cpp  Color.h  Matrix.cpp  Matrix.h  Point.cpp  Point.h  PointIterator.h  Rectangle.cpp  Rectangle.h  Rectangle.ipp  Vector2.cpp  Vector2.h  Vector2.ipp  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h  platform.h  platformUtilities.cpp  platformUtilities.h
resources/: identity.fragmentshader  identity.vertexshader
tests/: AlignmentTest.cpp  CMakeLists.txt  CartographTest.cpp  PointIteratorTest.cpp  RectangleTest.cpp  VectorTest.cpp
